apps/architecture-portal/versioned_docs/version-1.0.41.0/platform/web-runtime.mdx
---
title: Web Runtime Platform
area: platform
status: partial
owners: [web, audio]
source_paths:
  - apps/web-runtime-lab
  - apps/web-runtime-host
  - apps/creator-web
  - packages/web-runtime-platform
  - scripts/creator-web.sh
  - scripts/web-runtime-host.sh
  - docs/quality/2026-08-03-formal-web-runtime-host-acceptance.md
  - docs/quality/web-runtime-lab-acceptance.md
  - docs/architecture/2026-08-01-web-realtime-audio-threshold-decision.md
  - docs/release-evidence/2026-08-27-web-runtime-l1-macos-safari-pointer-1.0.36.0.md
  - docs/release-evidence/2026-08-31-web-runtime-l2-macos-chrome-pointer-1.0.40.0.md
  - docs/release-evidence/2026-08-31-web-runtime-l3-macos-chrome-midi-1.0.40.0.md
  - docs/release-evidence/2026-09-01-web-runtime-l4-ipados-safari-touch-1.0.40.0.md
  - docs/superpowers/plans/2026-08-09-lmdj-stage8-sample-editor.md
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';

<BuildIdentity />

## 当前组成

Web Runtime Lab 继续作为独立实验与物理证据准备器，不在 Product Assembly。正式产品路径由 Web Runtime Platform `2.0.1`、Diagnostic Web Runtime Host `2.1.1` 与 Creator Web Host `2.1.1` 组成，并锁入 Product Build `1.0.41.0`。共享 Runtime Session 桥接 revision-bound Sample quota、manifest-bound Sample import total、多 chunk sidecar、Sequence recording、settings、next-Bar switch、receipt 与 recovery；Host 只呈现 authority state。

## 共享 Platform

两个 Host 使用同一 Runtime Session、input adapters、Control bridge、OPFS capability gate、Application Facade 与 AudioWorklet 接线。Pointer、Keyboard、MIDI 在共享 Audio Runtime frame clock 上取得时间戳并按 `input_sequence` 串行；BPM anchor 和 Bar boundary 来自 Core，JavaScript 不实现 quantizer、fingerprint 或 fallback sequencer。Project 路径只由 retained current Project 注入，Browser payload 不得携带 `project_path`。

Host preflight 的单次 Control Worker capability probe 使用 15 秒有界预算。CPU 或文件 I/O contention 可以推迟结果，但不能被解释成 OPFS primitive 缺失；明确 primitive 缺失、actual negative 或 Worker error 仍 fail closed 为 `UNSUPPORTED_WEB_RUNTIME`，deadline expiry 则为 `HOST_TIMEOUT`。无论 settle 原因如何，临时 Worker 与 Blob URL 都由 probe owner 清理。

Project I/O 的三个文件 mutation primitive（`append_durable`、`replace_complete`、`create_immutable`）都要求目标 Project 的有效 writer lease，且 lease 必须属于发起调用的同一 `ProjectStoragePlatform`；无覆盖 lease 时以 `IO_ERROR` + `storage_condition=invalid_state` 失败，不同 same-page platform 试图复用 owner lease 时以 `IO_ERROR` + `storage_condition=project_busy` 在打开 target 或 intent 前失败。Web OPFS 还把 `QuotaExceededError` 与 `InvalidStateError` 保留为 `quota_exceeded` / `invalid_state` 类型化条件，而不是丢失为空 details。

## 分发与服务

两个 Host 都生成 canonical manifest 与内容哈希资产；固定 Emscripten `6.0.5`、512 MiB heap、协议 `1`，以及 64 MiB/Bank、128 MiB/generation、256 MiB publication residency、100 MiB source、43,200,000 decoded frames、2 channels、65 MiB committed WAV 的精确资源上限。`decoded_frames_per_pad` 已退役。proof-only server 在 bind 前验证完整 dist，并固定 COOP/COEP/CORP/CSP、MIME、cache、no-follow 与每请求 hash；它不是生产部署服务。

## 线程与生命周期

主线程负责 UI、用户手势和生命周期观察；Dedicated Worker/Control 拥有 OPFS 与 Facade；AudioWorklet 处理实时音频。消息、sidecar、queue 与 timeout 均有界。Project open/import 与 Sample mutation 共用可恢复 action tail；每次 Pad press 的 inspect→trigger admission 串行，避免并发 Facade query 进入同一 native owner，同时不会形成 inspect backlog。adverse lifecycle 会取消可安全重试的纯读请求，使 preview clear 与 `sample.stop(all)` 不被长查询阻塞；已提交 mutation 的 Project/Runtime 分离结果仍由后续权威 refresh 收敛，不重放 mutation。

运行中的显式 `snapshot.reload`/retry，以及 `sample.import.commit`、`sample.update_pad`、`sample.reset_pad` 触发的自动 Bank publication，只有在 AudioWorklet 精确确认其新 Bank generation 后才报告 Runtime publication 成功；旧的非零 acknowledgement 不构成成功。Sample mutation 若已提交 Project Truth，但 acknowledgement 超时，则仍返回已提交的 revision，同时以 `runtime_published=false` 和类型化 `snapshot_error` 表达 Runtime fail-closed，绝不把它误报成可回滚的 Project 失败；deadline 若在 Project commit 后、Runtime publication 前到期，同样 seal 运行中的 Runtime 并保留已提交 Project revision。首次 AudioWorklet bootstrap 完成后，Browser Main 才在 callback baseline 与 `AudioContext.resume()` 边缘建立一秒 activation deadline；bootstrap 不消耗该预算，恢复路径则从 resume edge 共用同一预算。resume 后 Browser Main 先等待 lock-free paused-callback heartbeat 前进，再以剩余额度请求 Control 开 gate。Bridge 将 operation cutoff 与 caller cutoff 的较早者作为 absolute effective deadline 直接交给 Control，Control 不从 `submitted_at` 重建完整 operation window。Project mutation 若在 cutoff 前原子赢得 publication claim，则仅保留到 commit/abort 结算的 authority；未 claim 工作及其后的 Runtime-derived publication/acknowledgement 仍受 absolute cutoff 约束。Control 锁存已验证的 current generation，由首个 open-gate callback 确认同一 generation。timeout 或跨代 acknowledgement 会 fail closed，不增加 timeout，也不在 realtime callback 加锁、分配或调用 Host。

AudioWorklet 的 terminal quiescence 在首个 caller budget 超时并锁存 fatal 后，只再等待一个同长度的 terminal budget；callback 仍未退出时返回类型化 `INTERNAL_ERROR`，不再无限 futex 等待。Transport 收到无法关联到 pending request 的未知或重复 response 时会原子 fail closed：仅终止一次、以 `HOST_PROTOCOL_MISMATCH` 拒绝其余 pending request，并清空 pending/active identity。真实 Chromium Browser Main conformance 会在 unknown response 进入 scheduled production poll 前保持另一个 production request pending，并直接观察该 promise 被同一 terminal error 拒绝且 ID 清除。Manifest mismatch、publication outcome unknown、Voice ring overflow、终止与重启恢复同样 fail closed；`HOST_RESTART_REQUIRED` 不得被页面重试掩盖。

Runtime Session 是 input 与 terminal cleanup 的唯一 owner。每个终止或 replacement
generation 都必须释放 Worker/transport、MIDI listeners、BroadcastChannel、AudioContext
和 window lifecycle listeners；新 generation 不得在旧 generation 仍持有这些资源时
成为 owner。persisted page lifecycle 保留共享 Runtime，non-persisted terminal
pagehide 才进入 close。

## 自动化范围

共享 C++/Node tests 固定 manifest、transport、frame-stamped input、Sequence recovery 与 realtime session；Creator 和 Diagnostic 的 packaged Playwright proof 分别验证 Sequence 创作旅程与诊断压力/lifecycle 路径。WebKit capability smoke 只有在 mandatory primitive 可用时才能升级为完整自动化 PASS。

## 公共静态托管边界

Runtime Host 发布 workflow 先运行读不到 Netlify credential 的 preflight job：它从 canonical
origin 获取 remote signed tag 与受保护 `main`，要求 tag commit 是该 `main` 的 ancestor；
Release inventory 精确为 ZIP、checksum、受信且专用的 Release checksum key 的 detached
armored checksum signature，并在解析 checksum 前验证角色专属 signature；Product tag key 与
checksum key 不能替代。preflight 还完成资产下载与 staging，只有它通过后才安装
Node/Chromium；部署 job 在 Netlify mutation 前对同一 Release 重新验证。随后它会发现并
验证真实 prior Product/Host 身份，在 prior immutable 与 production 上先跑完整
HTTP/Chromium，再创建 immutable draft；只有 draft smoke 通过才发布同一 ready Deploy ID。
发布后失败或信号中断会 reconcile alias，必要时恢复 exact prior；首次无 prior 时采用官方
reversible site disable。生成站点只给 manifest 中九个精确 hash asset 加 immutable header，
未知 asset/source map 继续 `no-store`；成功/恢复分别保存 deployment evidence v2/recovery
evidence v1。

proof-only server 仅对本地 Proof 服务 `dist` 与安全 headers；它不是生产服务。生产由
Netlify 静态托管同一份已验证的 release `dist`，不运行该 Python server。`lmdj-canary`
属于 Creator 交付边界，排除在 Diagnostic Runtime Host project/URL/alias 之外；完整操作与 pre-deploy
记录分别见仓库文件 `docs/deploy/web-runtime-host.md` 和
`docs/quality/2026-08-08-web-runtime-public-deployment-acceptance.md`。

发布工具、workflow、历史 Build 的 tag/Release 或任何部署证据，都不自动证明当前 Product
Build `1.0.41.0`、历史 `1.0.40.0` / `1.0.39.0` / `1.0.38.0` / `1.0.37.0` / `1.0.36.0` / `1.0.31.0` / `1.0.30.0` / `1.0.29.0`、未通过审查的 `1.0.28.0` 或更早 Product Build 已获得 remote verified tag、Release、Deploy ID、
immutable URL、production publication 或 Channel promotion。Portal 只接受与精确 Product/Host 身份绑定并经审查的 evidence
record；本地 Proof 或 PR Preview 不能替代公共部署证据。

## 非能力与下一门禁

当前不承诺 Creator 离线安装或公共部署、跨物理设备一致体验或 `beta`/`stable` 质量。macOS Safari Pointer 已在 Product Build `1.0.36.0` 的 local source、tested revision `703b339f` 上完成 500-trigger 与十分钟前台物理验收；[L1 证据](https://github.com/endaye/lmdj/blob/main/docs/release-evidence/2026-08-27-web-runtime-l1-macos-safari-pointer-1.0.36.0.md)只升级该行。macOS Chrome Pointer 已在 Product Build `1.0.40.0` 的 local source、tested revision `5c094c98` 上完成相同范围验收；[L2 证据](https://github.com/endaye/lmdj/blob/main/docs/release-evidence/2026-08-31-web-runtime-l2-macos-chrome-pointer-1.0.40.0.md)只升级该行。macOS Chrome Physical MIDI 已在 Product Build `1.0.40.0` 的 local source、tested revision `1869a925` 上以 Akai MPD218 完成 500-event 与物理时序验收；[L3 证据](https://github.com/endaye/lmdj/blob/main/docs/release-evidence/2026-08-31-web-runtime-l3-macos-chrome-midi-1.0.40.0.md)只升级该行。iPadOS Safari Touch 已在 Product Build `1.0.40.0` 的 local source、tested revision `e2cd0cf9`、iPad Air 13-inch (M3) model `A3268` 上完成 500-trigger、物理时序与十分钟前台验收；[L4 证据](https://github.com/endaye/lmdj/blob/main/docs/release-evidence/2026-09-01-web-runtime-l4-ipados-safari-touch-1.0.40.0.md)只升级该行。iPadOS Safari lifecycle 仍为 `deferred / unverified`。完整矩阵仍为 `unverified`，Snapshot、tag、PR/CI、merge、发布和 Channel promotion 各自需要独立证据。
